--- a/Store.Data/Store.Repository/Store.Repository.csproj
+++ b/Store.Data/Store.Repository/Store.Repository.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Store.Data\Store.Data.csproj" />
+    </ItemGroup>
+
 </Project>
