--- a/Store.Data/Store.Service/Store.Service.csproj
+++ b/Store.Data/Store.Service/Store.Service.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Store.Repository\Store.Repository.csproj" />
+    </ItemGroup>
+
 </Project>
