--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=ECommerceDB;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;"
+  }
 }
