--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ECommerceDB;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;"
-  }
+  },
+  "BaseUrl": "http://localhost:5039"
 }
