--- a/Store.Data/Store.Service/Store.Service.csproj
+++ b/Store.Data/Store.Service/Store.Service.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     </ItemGroup>
 
 </Project>
