--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ECommerceDB;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=ECommerceDB;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;",
+    "Redis": "localhost"
   },
   "BaseUrl": "http://localhost:5039"
 }
