Basket Repository Setup

--- a/Store.Data/Store.Repository/Store.Repository.csproj
+++ b/Store.Data/Store.Repository/Store.Repository.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Store.Data\Store.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+    </ItemGroup>
+
 </Project>
