--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ECommerceDB;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;",
+    "IdentityConnection": "Server=localhost,1433;Database=StoreIdentityDb;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;",
     "Redis": "localhost"
   },
   "BaseUrl": "http://localhost:5039"
