--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -11,5 +11,9 @@
     "IdentityConnection": "Server=localhost,1433;Database=StoreIdentityDb;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=True;",
     "Redis": "localhost"
   },
-  "BaseUrl": "http://localhost:5039"
+  "BaseUrl": "http://localhost:5039",
+  "Token":{
+    "Key": "POWERFULENCRYPTIONKEY",
+    "Issuer": "http://localhost:5039"
+  } 
 }
