User Service Login

--- a/Store.Data/Store.Web/appsettings.json
+++ b/Store.Data/Store.Web/appsettings.json
@@ -12,8 +12,8 @@
     "Redis": "localhost"
   },
   "BaseUrl": "http://localhost:5039",
-  "Token":{
-    "Key": "POWERFULENCRYPTIONKEY",
+  "Token": {
+    "Key": "POWERFULENCRYPTIONKEYFORJWTUSING",
     "Issuer": "http://localhost:5039"
   } 
 }
